gitlab/gitlab-pv-pvc/gitlab-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitlab
  namespace: kube-ops
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: git.ops.com
    http:
      paths:
      - backend:
          serviceName: gitlab
          servicePort: http
